# simplefold-burn

./: .gitignore  Cargo.toml  LICENSE  README.md  compute_esm.py  requirements.txt
data/: ccd.json
data/configs/: simplefold_1.1B.json  simplefold_1.6B.json  simplefold_100M.json  simplefold_360M.json  simplefold_3B.json  simplefold_700M.json
src/: blocks.rs  data.rs  flow.rs  main.rs  model.rs  ref_constants.rs  utils.rs
